<resources>
    <string name="app_name">Fiap Imoveis</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Home</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="msg_usuario_invalido">Usuário ou senha incorretos.</string>
    <string name="logar">Logar</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="inicio">Início</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="sobre">Sobre</string>
    <string name="pesquisar">Buscar</string>
    <string name="title_activity_cadastro_imovel">CadastroImovelActivity</string>
    <string name="imagem_casa_descricao">Imagem Casa</string>
    <string name="manter_conectado">Manter conectado</string>
    <string name="nome_contato">Nome Contato</string>
    <string name="telefone">Telefone</string>
    <string name="tipo_imovel">Tipo</string>
    <string name="em_construcao">Em Construção</string>
    <string name="tamanho">Tamanho</string>
    <string name="apartamento">Apartamento</string>
    <string name="casa">Casa</string>
    <string name="loja">Loja</string>
    <string name="kitnet">Kitnet</string>
    <string name="outro">Outro</string>
    <string name="pequeno">Pequeno</string>
    <string name="medio">Médio</string>
    <string name="grande">Grande</string>
</resources>
